--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 <!-- ヘッダー -->
 <header>
-    <h1><a href="index.html">SCIENCE</a></h1>
+    <h1><a href="https://wingmantk.github.io/system-A08/">SCIENCE</a></h1>
     <nav id="mainMenu" class="menu">
         <ul>
         </ul>
